[tool.poetry]
name = "weighting_spectral_similarity"
version = "0.1.0"
description = ""
authors = ["Chloe Engler <engler.chloe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
ipykernel = "^6.23.3"
matplotlib = "^3.7.1"
numba = "^0.57.1"
pandas = "^2.0.3"
pyteomics = "^4.6"
seaborn = "^0.12.2"
spectrum-utils = "^0.4.2"
rdkit = "^2023.3.2"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
jupyter = "^1.0.0"
scipy = "1.8.0"
utils = "^1.0.1"
scikit-learn = "^1.3.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"
ms_entropy = "^0.9.9"
numpy = "1.22"
fsspec = "^2023.6.0"
s3fs = "^2023.6.0"
fastparquet = "^2023.7.0"
pyarrow = "^12.0.1"
awswrangler = "^3.2.1"
ms2deepscore = "^0.4.0"
molmass = "^2023.4.10"
metabolomics = {git = "https://github.com/enveda/metabolomics"}
upsetplot = "^0.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
